# tallr

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  NETWORK_INTERCEPTION_PLAN.md  NETWORK_PHASE_1_LAUNCHER.md  NETWORK_PHASE_2_INTEGRATION.md  NETWORK_PHASE_3_PENDING.md  PRD.md  README.md  RELEASE_NOTE_FOR_USERS_CLEAN.md  SECURITY.md  USER.md  index.html  package-lock.json  package.json  snapshot.json  test-auth.cjs  test-pty.js  tsconfig.json  vite.config.ts  vitest.config.js
.claude/commands/: explore-plan-code-test.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: P1.1-CLI-Installation.md  P1.2-Interactive-Claude-Sessions.md  P1.3-Session-Creation.md  P1.4-State-Tracking.md  P2.1-Pattern-Detection.md  PHASE_3A_STATUS.md  TALLY_AGENT_INTEGRATION_DOWNLOADER.md  TALLY_FEASIBILITY_DEEP_DIVE.md
docs/archive/network-detection-attempt/: NETWORK_INTERCEPTION_PLAN.md  NETWORK_PHASE_1_LAUNCHER.md  NETWORK_PHASE_2_INTEGRATION.md  NETWORK_PHASE_3_PENDING.md  README.md  REVERT_GUIDE.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  constants.rs  handlers.rs  lib.rs  main.rs  state.rs  toolbar.rs  tray.rs  types.rs  utils.rs
src/components/: Badge.tsx  CliConnectionStatus.tsx  ConnectionStatus.tsx  DebugDialog.tsx  DebugPage.tsx  EmptyState.tsx  Header.tsx  HooksTip.tsx  NetworkActivityIndicator.tsx  ProjectFilterPills.tsx  SetupWizard.css  SetupWizard.tsx  StatusIndicator.tsx  TaskDetail.tsx  TaskMetadata.tsx  TaskRow.tsx  TaskStateBadge.tsx  UnifiedToolbar.tsx
src/components/ui/: FilterPill.tsx  (+2 more)
src/hooks/: useAdaptiveWindowSize.ts  useAppState.ts  useDebugData.ts  useFilteredTasks.ts  useSettings.ts
src/lib/: constants.ts  sessionHelpers.ts  taskHelpers.ts  utils.ts
src/services/: api.ts  notificationService.ts
src/types/: index.ts
src/utils/: debug.ts  errorUtils.ts  logger.ts
tools/: logo.js  package-lock.json  package.json  tallor  tallor-ide  tallr  tallr-ide  tally  tally-ide  tl-wrap.js
tools/examples/: complete-task.sh  post-waiting.sh  test-error.sh  test-success.sh  test-waiting-user.sh
tools/lib/: auth-manager.js  claude-hooks.js  claude-launcher.cjs  claude-patterns.js  claude-remote-launcher.cjs  debug-registry.js  debug.js  hooks-detector.js  http-client.js  ide-detector.js  network-launcher.js  patterns.js  process-manager.js  settings.js  state-tracker.js  status-indicator.js
tools/test/: claude-launcher-integration.test.js  claude-launcher-phase2-integration.test.js  claude-launcher-phase3-pending.test.js
(+5 files in other folders)
