[package]
name = "tallr"
version = "1.0.0"
description = "Tallr - AI Agent Monitor"
authors = ["Tallr Team"]
edition = "2021"

[lib]
name = "tallr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# HTTP Server - Axum 0.8
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage and utilities
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
image = "0.25"
rand = "0.8"
hex = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

